tests/API/Negative/TC-API-ACC-02.robot
*** Settings ***
Resource    ../../../resources/keywords/api_keywords.robot

*** Test Cases ***
TC-API-ACC-02
    [Documentation]  This test case is to verify the invalid account retrieval
#    Login User
    Invalid account retrieval